# mycelium

./: .env.dist  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  rust-dockerfile
.github/workflows/: rust.yml
src/: application.rs  main.rs  plugins.rs  service.rs
src/application/: event.rs  event_source.rs  observer.rs  pipe.rs  state.rs  temporary.rs  value.rs
src/application/event/: save_to_amqp.rs  save_to_console.rs  save_to_file.rs  save_to_mongodb.rs  update_progressbar.rs
src/application/event_source/: event_source.rs
src/application/pipe/: pipe.rs
src/application/state/: state.rs
src/plugins/: amqp.rs  console.rs  file.rs  mongodb.rs  progressbar.rs
src/service/: apply.rs  clear.rs  connection.rs  middleware.rs  multi_middleware.rs  multi_write.rs  read.rs  show.rs  write.rs
tests/assets/apply/: default.yaml  wrong.yaml
