[package]
authors = ["Karol Hrusza <khrusza@gmail.com>"]
description = "Mycelium - application to connect between sources!"
name = "mycelium"
readme = "README.md"
version = "0.1.0"

[dependencies]
dotenv = "0.15.0"
structopt = "0.3.21"
rand = "0.7.3"
amiquip = { version = "0.4", default-features = false }
serde_json = "1.0.60"
serde_derive = "1.0.118"
colored_json = "2.1.0"

serde = "1.0.118"
bincode = "1.3.1"
