[package]
authors = ["Karol Hrusza <khrusza@gmail.com>"]
description = "Mycelium - application to connect between sources!"
name = "mycelium"
readme = "README.md"
version = "0.2.0"
edition = "2015"

[dependencies]
dotenv = "0.15.0"
structopt = "0.3.21"
rand = "0.7.3"
amiquip = { version = "0.4", default-features = false }
serde_yaml = "0.8.13"
serde_json = "1.0.60"
serde_derive = "1.0.118"
colored_json = "2.1.0"
console = "0.14.0"
serde = "1.0.118"
bincode = "1.3.1"
bson = "0.11.1"
jq-rs = { version = "0.4.1", features=["bundled"] }

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]
